# Top_Game

./: .gitignore  CMakeLists.txt  Class UML.puml  README.md  config.yml  main.cpp  vcpkg.json
.github/workflows/: config.yml
cppfiles/: geometryCreation.cpp  keyChecker.cpp  player.cpp  world.cpp
data/: Tractor.stl  mapCoinData.txt  mapSpikeData.txt  mapTestData.txt  mapWallData.txt  mapdata.txt
data/models/stl/: Amog_US.stl  mogus.stl
data/shaders/ShaderChunk/: encodings_pars_fragment.glsl  packing.glsl
examples/: CMakeLists.txt  boxColorChange.cpp  coinVisualizerExample.cpp  playerModelExample.cpp  spikeVisualizerExample.cpp  worldVisualizerExample.cpp
include/: cameraCalculations.hpp  cameraHandler.hpp  cameraVisualizer.hpp  coinMath.hpp  coinVisualizer.hpp  coins.hpp  fileReader.hpp  game.hpp  gameLogic.hpp  geometryCreation.hpp  keyChecker.hpp  keyInput.hpp  mapFileReader.hpp  mines.hpp  moveAbleObject.hpp  player.hpp  playerCamera.hpp  playerHandler.hpp  playerVisualizer.hpp  raycasterAttacher.hpp  raycasters.hpp  sceneHandler.hpp  spikeMath.hpp  spikeVisualizer.hpp  world.hpp  worldCalculations.hpp  worldHandler.cpp  worldScene.hpp  worldVisualizer.hpp
include/Deperecated/: gameLogicOld.hpp  geometryCreationOld.hpp  playerOld.hpp  worldOld.hpp
include/NotInUse/: geometryCreation.hpp  world.hpp
include/coin/: coinLayer.hpp  coinMath.hpp  coinVisualizer.hpp
include/player/: cameraAttacher.hpp  moveAble.hpp  player.hpp  playerCamera.hpp  playerVisualizer.hpp
include/spike/: spikeLayer.hpp  spikeMath.hpp  spikeVisualizer.hpp
include/world/: worldLayer.hpp  worldVisualizer.hpp
src/: CMakeLists.txt  game.cpp  geometryCreation.cpp  keyInput.cpp  mapFileReader.cpp  player.cpp  playerVisualizer.cpp  raycasters.cpp  world.cpp  worldVisualizer.cpp
src/Deperecated/: geometryCreation.cpp  geometryCreationOld.cpp  player.cpp  playerOld.cpp  world.cpp  worldOld.cpp
src/coin/: coinLayer.cpp  coinMath.cpp  coinVisualizer.cpp
src/notinUse/: geometryCreation.cpp  player.cpp  world.cpp
src/player/: cameraAttacher.cpp  moveAble.cpp  player.cpp  playerCamera.cpp  playerVisualizer.cpp
src/spike/: spikeLayer.cpp  spikeMath.cpp  spikeVisualizer.cpp
src/world/: worldLayer.cpp  worldVisualizer.cpp
tests/: CMakeLists.txt  test.cpp  test_cameraCalculations.cpp  test_coinMath.cpp  test_mapFileReader.cpp  test_moveAbleObject.cpp  test_player.cpp  test_spikeMath.cpp
